--- a/package.json
+++ b/package.json
@@ -1,46 +1,81 @@
 {
-  "name": "@netology-group/wc-reaction",
-  "version": "0.1.0",
+  "name": "@netology-group/wc-poll",
+  "version": "0.1.2",
   "description": "",
-  "main": "lib",
-  "scripts": {
-    "lint": "eslint . --ext .js,.mjs",
-    "test": "npm run lint",
-    "build": "rollup -c",
-    "demo": "http-server . -p ${DEMO_PORT:-9090}",
-    "prepare": "npm run build",
-    "start": "npm run demo"
-  },
-  "directories": {
-    "lib": "lib"
-  },
-  "files": [
-    "es",
-    "lib"
-  ],
-  "repository": {
-    "url": "https://github.com/netology-group/wc-reaction"
-  },
   "bugs": {
     "url": "https://github.com/netology-group/wc-reaction/issues"
   },
-  "author": "",
+  "repository": {
+    "url": "https://github.com/netology-group/wc-reaction"
+  },
   "license": "MIT",
+  "author": "",
+  "files": [
+    "es",
+    "lib",
+    "dist",
+    "fonts"
+  ],
+  "main": "lib",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "prebuild": "rm -rf dist es fonts public/**",
+    "build": "NS=WCPoll ENTRY=index rollup -c && rollup -c",
+    "postbuild": "NS=WCEmbed ENTRY=embedded rollup -c && rollup -c rollup.config.polyfill.js",
+    "demo": "http-server . -p ${DEMO_PORT:-9090}",
+    "eslint": "eslint lib",
+    "lint": "npm run lint && npm run stylelint",
+    "prepare": "npm run build",
+    "start": "npm run demo",
+    "stylelint": "stylelint lib",
+    "test": "npm run lint"
+  },
+  "stylelint": {
+    "extends": [
+      "stylelint-config-standard"
+    ],
+    "plugins": [
+      "stylelint-order"
+    ],
+    "rules": {
+      "order/order": [
+        "dollar-variables",
+        "custom-properties",
+        "at-variables",
+        "declarations",
+        "rules",
+        "at-rules"
+      ],
+      "order/properties-alphabetical-order": false
+    }
+  },
   "dependencies": {
+    "@fxf/ui": "github:netology-group/foxford-ui#master",
     "@netology-group/wc-utils": "^0.1.0",
     "@polymer/lit-element": "^0.5.2",
-    "@webcomponents/webcomponentsjs": "^2.0.3",
+    "@webcomponents/webcomponentsjs": "^2.1.0",
     "core-js": "^2.5.7",
-    "node-emoji": "^1.8.1"
+    "formdata-polyfill": "^3.0.11",
+    "ramda": "^0.25.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.0.0",
+    "autoprefixer": "^9.1.2",
     "babel-cli": "^6.26.0",
     "babel-plugin-external-helpers": "^6.22.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "eslint-config-adequate": "^1.1.1",
+    "node-sass": "^4.9.3",
+    "postcss": "^7.0.2",
+    "postcss-fontpath": "^1.0.0",
+    "postcss-import": "^12.0.0",
     "postcss-preset-env": "^5.2.2",
+    "postcss-url": "^8.0.0",
     "rollup": "^0.62.0",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -49,6 +84,9 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-svg": "^1.0.1",
-    "rollup-plugin-uglify": "^4.0.0"
+    "rollup-plugin-uglify": "^4.0.0",
+    "stylelint": "^9.5.0",
+    "stylelint-config-standard": "^18.2.0",
+    "stylelint-order": "^1.0.0"
   }
 }
