--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "license": "MIT",
   "author": "",
   "files": [
+    "dist",
     "es",
-    "dist"
+    "lib"
   ],
   "main": "dist/dist.min.js",
   "directories": {
-    "lib": "lib"
+    "lib": "src"
   },
   "scripts": {
     "prebuild": "npm run cleanup && npm run build:polyfill && npm run build:es",
@@ -25,15 +26,15 @@
     "build:polyfill": "rollup -c rollup.polyfill.js",
     "build:umd": "npm run rollup:umd -- -o dist/dist.js",
     "build:umd:min": "cross-env NODE_ENV=production npm run rollup:umd -- -o dist/dist.min.js",
-    "cleanup": "rm -rf dist es public/node_modules public/fonts",
+    "cleanup": "rm -rf dist es lib public/node_modules public/fonts",
     "demo": "http-server . -p ${DEMO_PORT:-9090}",
-    "eslint": "eslint lib",
+    "lint": "eslint src",
     "prepublishOnly": "npm run test && npm run build",
     "rollup:umd": "cross-env SKIPCSS=1 ENTRY=dist rollup -c rollup.umd.js",
     "prestart": "npm run build",
     "start": "npm run demo",
-    "stylelint": "stylelint lib",
-    "test": "npm run eslint && npm run stylelint"
+    "stylelint": "stylelint src",
+    "test": "npm run lint && npm run stylelint"
   },
   "stylelint": {
     "extends": [
