Normalize build scripts

--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,52 @@
 {
-  "presets": [
-    ["env",{
-      "modules": false,
-      "targets":{
-        "chrome": 50,
-        "firefox": 50,
-        "safari": 10,
-        "ios": 10,
-        "opera": 40,
-        "edge": 13,
-        "ie": 11
-      }
-    }]
-   ],
   "plugins": [
-    "transform-object-rest-spread",
-    "external-helpers"
-  ]
+    "babel-plugin-transform-object-rest-spread",
+    ["babel-plugin-transform-inline-environment-variables", {
+      "include": [ "NODE_ENV" ]
+    }]
+  ],
+  "env":{
+    "es": {
+      "plugins": [
+        "babel-plugin-annotate-pure-calls"
+      ]
+    },
+    "cjs": {
+      "presets": [
+        ["babel-preset-env",{
+          "modules": false,
+          "targets":{
+            "chrome": 43,
+            "firefox": 43,
+            "safari": 10,
+            "ios": 10,
+            "opera": 40,
+            "edge": 13,
+            "ie": 9
+          }
+        }]
+      ],
+      "plugins": [
+        "babel-plugin-annotate-pure-calls",
+        "babel-plugin-transform-es2015-modules-commonjs"
+      ]
+    },
+    "rollup": {
+      "presets": [
+        ["babel-preset-env",{
+          "modules": false,
+          "targets":{
+            "chrome": 43,
+            "firefox": 43,
+            "safari": 10,
+            "ios": 10,
+            "opera": 40,
+            "edge": 13,
+            "ie": 9
+          }
+        }]
+      ],
+      "plugins": ["babel-plugin-external-helpers"]
+    }
+  }
 }
