--- a/package.json
+++ b/package.json
@@ -15,21 +15,26 @@
     "es",
     "lib"
   ],
-  "main": "dist/dist.min.js",
+  "main": "dist/poll.min.js",
+  "module": "es/index.js",
   "directories": {
     "lib": "src"
   },
   "scripts": {
-    "prebuild": "npm run cleanup && npm run build:polyfill && npm run build:es",
-    "build": "npm run build:es && npm run build:umd && npm run build:umd:min && npm run build:polyfill",
-    "build:es": "cross-env ENTRY=organisms/poll rollup -c rollup.es.js",
-    "build:polyfill": "rollup -c rollup.polyfill.js",
-    "build:umd": "npm run rollup:umd -- -o dist/dist.js",
-    "build:umd:min": "cross-env NODE_ENV=production npm run rollup:umd -- -o dist/dist.min.js",
+    "babel": "babel src --copy-files",
+    "prebuild": "npm run cleanup",
+    "build": "npm run build:polyfill && npm run build:polyfill:min && npm run build:cjs && npm run build:es && npm run build:umd && npm run build:umd:min",
+    "build:cjs": "cross-env BABEL_ENV=cjs npm run babel -- -d lib",
+    "build:es": "cross-env BABEL_ENV=es npm run babel -- -d es",
+    "build:polyfill": "npm run rollup -- rollup.polyfill.js -o dist/polyfill.js",
+    "build:polyfill:min": "cross-env NODE_ENV=production npm run rollup -- rollup.polyfill.js -o dist/polyfill.min.js",
+    "build:umd": "npm run rollup -- -o dist/poll.js",
+    "build:umd:min": "cross-env NODE_ENV=production npm run rollup -- -o dist/poll.min.js",
     "cleanup": "rm -rf dist es lib public/node_modules public/fonts",
     "demo": "http-server . -p ${DEMO_PORT:-9090}",
     "lint": "eslint src",
     "prepublishOnly": "npm run test && npm run build",
+    "rollup": "cross-env BABEL_ENV=rollup rollup -c",
     "rollup:umd": "cross-env SKIPCSS=1 ENTRY=dist rollup -c rollup.umd.js",
     "prestart": "npm run build",
     "start": "npm run demo",
@@ -56,8 +61,8 @@
     }
   },
   "dependencies": {
-    "@foxford/ui": "^1.1.0",
-    "@netology-group/wc-utils": "^0.2.1",
+    "@foxford/ui": "^1.2.1",
+    "@netology-group/wc-utils": "^0.3.2",
     "@polymer/lit-element": "^0.5.2",
     "@webcomponents/webcomponentsjs": "^2.1.0",
     "core-js": "^2.5.7",
@@ -67,8 +72,11 @@
   "devDependencies": {
     "autoprefixer": "^9.1.2",
     "babel-cli": "^6.26.0",
+    "babel-plugin-annotate-pure-calls": "^0.4.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
@@ -79,6 +87,7 @@
     "postcss": "^7.0.2",
     "postcss-fontpath": "^1.0.0",
     "postcss-import": "^12.0.0",
+    "postcss-load-config": "^2.0.0",
     "postcss-preset-env": "^5.2.2",
     "postcss-url": "^8.0.0",
     "rollup": "^0.62.0",
@@ -87,7 +96,7 @@
     "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-postcss": "^1.6.2",
+    "rollup-plugin-postcss": "~1.6.3",
     "rollup-plugin-svg": "^1.0.1",
     "rollup-plugin-uglify": "^4.0.0",
     "stylelint": "^9.5.0",
